# pythonAgents

./: Dockerfile.agent  Dockerfile.web  LICENSE  README.md  config.json  docker-compose.yml  model_handler.py  ollama-init.sh  pyproject.toml  requirements.txt
agent_workspace/: test_text.txt
calculator/: main.py  tests.py
calculator/pkg/: calculator.py  render.py
cli/: __init__.py  main.py
core/: __init__.py  logging_utils.py  loop.py  prompting.py  runtime.py  tool_utils.py
functions/: __init__.py  calculate_expression.py  execute_python_code.py  execute_python_file.py  list_directory_tool.py  path_sandbox.py  read_file_tool.py  write_file_tool.py
webagents/: __init__.py  agent_service.py  web_service.py
